--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1,7 +1,3 @@
-' Hausfreund':
-  references:
-    HF:
-    - start: 143
 4 Esra 7. 12:
   references:
     GA 29/30:
@@ -548,6 +544,7 @@ Darwinismus:
     - start: 382
     - start: 384
 Das Habermus:
+  author: Hebel, Johann Peter
   references:
     HF:
     - start: 145
@@ -724,6 +721,7 @@ Der Mensch im Weltalter des Ausgleichs:
     - start: 106
   type: w
 Der Sommerabend:
+  author: Hebel, Johann Peter
   references:
     HF:
     - start: 145
@@ -1549,11 +1547,8 @@ Hausfreund:
     HF:
     - start: 135
     - start: 137
-    - start: 140
-    - start: 141
-    - start: 142
-    - start: 144
-      suffix: f
+    - end: 145
+      start: 140
 Haustier:
   parent: Tier
   references:
